tests/lean/bad_id.lean
import data.num

definition x.y := 10

definition x.1 := 10
